--- a/hidden.html
+++ b/hidden.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="DHBW Stuttgart">
-    <meta name="author" content="Tobias Weierberger">
+    <meta name="author" content="Nicht die DHBW Stuttgart">
 
     <title>DHBW Stuttgart</title>
 
