--- a/hidden.html
+++ b/hidden.html
@@ -175,7 +175,12 @@
         
         <h2>Glückwunsch - Sie haben eine versteckte Seite gefunden!</h2>
         
-
+        <h1>Moment, was ist das...?</h1>
+        REhCVyB0b3Agc2VjcmV0
+        <!-- looks pretty much like a base64 encrypted pw, right? -->
+        <!-- what can we do here? -->
+        <!-- is there a base64 encryptor around, maybe even in the web? Let's see! -->
+        <!-- hmm, https://www.base64decode.org/ could maybe do our job! -->
 
     </div>
     <!-- /.container -->
