--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
 onenote:https://dhbwstg-my.sharepoint.com/personal/udo_heuser_dhbw-stuttgart_de/Documents/Udo%20@%20Duale%20Hochschule%20Baden-Württemberg%20Stuttgart/Public.one#IT-Sec%20Übungen&section-id={A0922EA1-1542-4536-99E7-B569BDBE1BFC}&page-id={97ACEB42-9F8F-49D2-84FC-50017AB06BF7}&end" target="_blank">Wichtige Informationen!</a></li>
         -->
             
-        <li>Ihr DHBW Passwort ist abgelaufen. <a href="https://pranx.com/fake-virus/" target="_blank">Bitte ändern!</a>?</li>
+        <li>Sie bekamen von <a href="https://pranx.com/fake-virus/" target="_blank">it-admin@dhbw-stuttgart.de</a> eine E-Mail, in dem steht, dass Ihr DHBW Passwort abgelaufen ist. <a href="https://pranx.com/fake-virus/" target="_blank">Bitte aktualisieren Sie Ihr DHBW-Passwort!</a>?</li>
 
         <li>Wozu dient die Seite <a href="https://virustotal.com" target="_blank">Virustotal</a>?</li>
             
