--- a/hidden.html
+++ b/hidden.html
@@ -176,6 +176,7 @@
         <h1>Glückwunsch - Sie haben eine versteckte Seite gefunden!</h1>
         
         <h2>Moment, was ist das...?</h2>
+        The key to open all secrets of DHBW Stuttgart? Did you ever want to know your exam marks, even those of your neighbor? Then try...
         REhCVyB0b3Agc2VjcmV0
         <!-- looks pretty much like a base64 encrypted pw, right? -->
         <!-- what can we do here? -->
