--- a/hidden.html
+++ b/hidden.html
@@ -177,7 +177,7 @@
         
         <h2>Moment, was ist das...?</h2>
         <div>REhCVyB0b3Agc2VjcmV0</div>
-        <div>This looks like the key to open all secrets of DHBW Stuttgart, right? Did you ever want to know your exam marks, even those we'll assign to you in future, even those of your neighbors? Then try hard ...</div>
+        <div>This looks like the key to open all secrets of DHBW Stuttgart, right? Did you ever want to know your exam marks, even those we'll assign to you in future, even those of your neighbors? Then try hard to first encrypt this key ...</div>
         <!-- looks pretty much like a base64 encrypted pw, right? -->
         <!-- what can we do here? -->
         <!-- is there a base64 encryptor around, maybe even in the web? Let's see! -->
