--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
         A phishing example may be send to the class!
         -->
             
-        <li>Sie bekamen von <a href="https://pranx.com/fake-virus/" target="_blank">it-admin@dhbw-stuttgart.de</a> eine E-Mail, in dem steht, dass Ihr DHBW Passwort abgelaufen ist. <a href="https://pranx.com/fake-virus/" target="_blank">Bitte aktualisieren Sie Ihr DHBW-Passwort!</a>?</li>
+        <li>Sie bekamen von <a href="https://pranx.com/fake-virus/" target="_blank">it-admin@dhbw-stuttgart.de</a> eine E-Mail, in dem steht, dass Ihr DHBW Passwort seit 1 Tag abgelaufen ist. Im folgenden werden Sie aufgefordert, <a href="https://pranx.com/fake-virus/" target="_blank">Ihr DHBW-Passwort zu ändern!</a>, wenn Sie nicht eine sofortige Exmatrikulation riskieren wollen. Was tun Sie?</li>
 
         <li>Wozu dient die Seite <a href="https://virustotal.com" target="_blank">Virustotal</a>?</li>
             
